--- a/app/src/main/res/layout/li_photo.xml
+++ b/app/src/main/res/layout/li_photo.xml
@@ -3,12 +3,13 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:padding="10dp"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <ImageView android:layout_width="match_parent"
-               android:layout_height="match_parent"
+               android:layout_height="wrap_content"
                android:id="@+id/li_image"
-               tools:src="@mipmap/ic_launcher_round"
+               tools:src="@drawable/ic_launcher_background"
+
     />
     <LinearLayout
             android:layout_weight="1"
@@ -24,8 +25,8 @@
         <ImageButton
                 android:id="@+id/likeButton"
                 android:background="@drawable/ic_like"
-                android:layout_width="34dp"
-                android:layout_height="34dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
         <TextView
                 android:layout_weight="1"
                 android:id="@+id/number_of_likes"
