--- a/app/src/main/res/layout/li_photo.xml
+++ b/app/src/main/res/layout/li_photo.xml
@@ -12,6 +12,7 @@
 
     />
     <LinearLayout
+            android:gravity="center"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:weightSum="8"
