--- a/app/src/main/res/layout/li_photo.xml
+++ b/app/src/main/res/layout/li_photo.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
-              android:padding="10dp"
+              android:padding="3dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <ImageView android:layout_width="match_parent"
@@ -13,10 +13,9 @@
     />
     <LinearLayout
             android:gravity="center"
-            android:layout_weight="1"
             android:layout_width="match_parent"
             android:weightSum="8"
-            android:layout_height="0dp">
+            android:layout_height="wrap_content">
         <TextView
                 android:layout_weight="6"
                 android:id="@+id/author"
