--- a/app/src/main/res/layout/li_photo.xml
+++ b/app/src/main/res/layout/li_photo.xml
@@ -7,6 +7,7 @@
               android:layout_height="wrap_content">
     <ImageView android:layout_width="match_parent"
                android:layout_height="wrap_content"
+               android:transitionName="image"
                android:id="@+id/li_image"
                tools:src="@drawable/ic_launcher_background"
 
@@ -22,11 +23,11 @@
                 tools:text="Author_Login"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"/>
-        <ImageButton
+        <Button
                 android:id="@+id/likeButton"
-                android:background="@drawable/ic_like"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:background="@mipmap/ic_like"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
         <TextView
                 android:layout_weight="1"
                 android:id="@+id/number_of_likes"
