--- a/presentation/src/main/res/layout/fr_photos.xml
+++ b/presentation/src/main/res/layout/fr_photos.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+        android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:background="@android:color/black"
         android:layout_height="match_parent"
 >
     <androidx.recyclerview.widget.RecyclerView
