--- a/presentation/src/main/res/layout/li_photo.xml
+++ b/presentation/src/main/res/layout/li_photo.xml
@@ -2,43 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
-              android:padding="3dp"
+              android:padding="1dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
-    <ImageView android:layout_width="match_parent"
-               android:layout_height="wrap_content"
+    <ImageView
+               android:layout_width="match_parent"
+               android:layout_height="220dp"
                android:transitionName="image"
                android:id="@+id/li_image"
                tools:src="@drawable/ic_launcher_background"/>
-    <LinearLayout
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:weightSum="8"
-            android:layout_height="wrap_content">
-        <TextView
-                android:layout_weight="6"
-                android:id="@+id/author"
-                tools:text="chrisjoelcampbell"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
-
-        <androidx.appcompat.widget.AppCompatCheckBox
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_margin="5dp"
-                android:button="@null"
-                android:checked="false"
-                android:background="@drawable/like_icon"
-                android:stateListAnimator="@animator/scale"
-                android:id="@+id/like_button"
-        />
-        <TextView
-                android:layout_weight="1"
-                android:id="@+id/number_of_likes"
-                tools:text="1575"
-                android:gravity="left"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
-    </LinearLayout>
 
 </LinearLayout>
