--- a/presentation/src/main/res/layout/ac_big_image.xml
+++ b/presentation/src/main/res/layout/ac_big_image.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:animateLayoutChanges="true"
->
+        android:animateLayoutChanges="true">
+
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/image"
             android:transitionName="image"
-            android:src="@drawable/ic_launcher_background"/>
-    <Button android:layout_width="30dp"
+            android:src="@drawable/ic_launcher_background" />
+
+    <Button
+            android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="20dp"
             android:layout_gravity="bottom|end"
             android:id="@+id/btn_download"
             android:background="@mipmap/ic_download"
-            android:visibility="gone"
-    />
-    <Button android:layout_width="30dp"
+            android:visibility="gone" />
+
+    <Button
+            android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="20dp"
             android:layout_gravity="bottom|center"
             android:background="@drawable/ic_add"
             android:id="@+id/btn_add"
-            android:visibility="gone"
-    />
+            android:visibility="gone" />
+
     <androidx.appcompat.widget.AppCompatCheckBox
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -39,7 +40,6 @@
             android:background="@drawable/like_icon"
             android:id="@+id/btn_like"
             android:stateListAnimator="@animator/scale"
-            android:visibility="gone"
-    />
+            android:visibility="gone" />
 
 </FrameLayout>
