--- a/presentation/src/main/res/menu/menu.xml
+++ b/presentation/src/main/res/menu/menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".MainActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".MainActivity">
 
     <item
             android:id="@+id/action_search"
@@ -14,13 +14,11 @@
             android:id="@+id/action_random"
             app:showAsAction="ifRoom"
             android:icon="@drawable/ic_cube"
-            android:title="Random"
-    />
+            android:title="Random" />
     <item
             android:id="@+id/action_saved"
             app:showAsAction="ifRoom"
             android:icon="@drawable/ic_collect"
-            android:title="Profile"
-    />
+            android:title="Profile" />
 
 </menu>
