--- a/presentation/src/main/res/layout/fr_photos.xml
+++ b/presentation/src/main/res/layout/fr_photos.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:background="@android:color/black"
-        android:layout_height="match_parent"
->
+        android:layout_height="match_parent">
+
     <androidx.recyclerview.widget.RecyclerView
             android:visibility="visible"
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-        <include
-                android:id="@+id/error_view"
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                layout="@layout/error_view"
-        />
+            android:layout_height="match_parent" />
+
+    <include
+            android:id="@+id/error_view"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            layout="@layout/error_view" />
 
 </LinearLayout>
